src/styles/calendar.css
body {
    font-family: Arial, Helvetica, sans-serif
}

main {
    display: flex;
	justify-content:left;
	width: auto;
}

.container {
	display: flex;
}

/* Calendar container */
.left-container {
	min-width: 20vw;
    background-color: white;
	background: #ffffff;
	padding: 15px;
	width: 0.3w;
	margin: 0 auto;
	overflow-y: hidden;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	/* display: inline-block; */
	display: flex;
	flex-direction: column;
	align-items: center;
    height: 100%;
	align-items: center;
}

#create-calendar-task {
	background-color: lightgray;
	border: none;
	padding: 15px 32px;
	font-size: larger;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	border-radius: 5%;
	margin: 5% 0% 10% 0%;
}

#create-calendar-task:hover {
	background-color: darkgray;
}

.right-container {
	min-width: 50vw;
    padding-left: 10px;
	overflow-x: hidden;
}

.day-header {
	font-size: larger;
	font-weight: bold;
	text-align: center;
}

.time {
	font-size: large;
	font-weight: 500;
	vertical-align: top;
	text-align: center;
	height: 40px;
}

.hour {
	border-top: solid 0.5px black;
}

/* table, tr, th, td {
	border: 0.5px solid black;
} */

table {
	border-collapse: collapse;
}

.day-detail h2 {
	text-align: center;
}

th.day-detail {
	position: sticky;
	top: 0;
	z-index: 10;
	background-color: #e3e3e3;
}

.day-detail {
	min-width: 8vw;
}

.weekly-container {
	padding-top: 2%;
	/* overflow-y: auto; */
}


/* Test task coloring */
.test-task {
	border-radius: 5%;
	background-color: red;
	text-align: center;
	color: white;
	max-width: 50px;
}

.task-2 {
	border-radius: 5%;
	background-color: green;
	text-align: center;
	color: white;
	max-width: 50px;
}

.left-container h3 {
    padding: 10px;
    text-align: center;
}

/* Buttons in the calendar */
.button-container-calendar button {
	cursor: pointer;
	background: grey;
	color: #fff;
	border: 1px solid grey;
	border-radius: 4px;
	padding: 5px 10px;
}

/* Calendar table */
.table-calendar {
	border-collapse: collapse;
	width: 100%;
}

.table-calendar td,
.table-calendar th {
	padding: 5px;
	border: 1px solid #e2e2e2;
	text-align: center;
	vertical-align: top;
}

/* Date picker */
.date-picker.selected {
	background-color: #f2f2f2;
	font-weight: bold;
	outline: 1px dashed #00BCD4;
}

.date-picker.selected span {
	border-bottom: 2px solid currentColor;
}

/* Sunday Style */
.date-picker:nth-child(1) {
	color: red;
}

/* Saturday Style */
.date-picker:nth-child(7) {
	color: blue;
}

/* Hover effect for date cells */
.date-picker:hover {
	background-color: #102937;
	color: white;
	cursor: pointer;
}

/* Navigation buttons */
.button-container-calendar {
	position: relative;
	margin-bottom: 1em;
	overflow: hidden;
	clear: both;
}

#previous {
	float: left;
}

#next {
	float: right;
}

/* Footer styling */
.footer-container-calendar {
	margin-top: 1em;
	border-top: 1px solid #dadada;
	padding: 10px 0;
}

.footer-container-calendar select {
	cursor: pointer;
	background: #ffffff;
	color: #585858;
	border: 1px solid #bfc5c5;
	border-radius: 3px;
	padding: 5px 1em;
}

.hourly-schedule {
	margin-top: 5%;
    max-height: 80vh;
}

